--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
   </head>
   <body>
     <h1>Cargar producto</h1>
-    <form action="/productos/" method="POST">
+    <form action="/api/productos/" method="POST" enctype="multipart/form-data">
       <label>Title:</label>
-      <input type="text" name="title" /><br />
+      <input type="text" name="title" required /><br />
       <label>Price:</label>
-      <input type="text" name="price" /><br />
+      <input type="text" name="price" required /><br />
       <label>Image:</label>
       <input type="file" name="image" /><br />
       <input type="submit" value="Cargar Producto" />
