--- a/public/index.html
+++ b/public/index.html
@@ -13,8 +13,8 @@
       <input type="text" name="title" required /><br />
       <label>Price:</label>
       <input type="text" name="price" required /><br />
-      <label>Image:</label>
-      <input type="file" name="image" /><br />
+      <label>Thumbnail:</label>
+      <input type="text" name="thumbnail" required /><br />
       <input type="submit" value="Cargar Producto" />
     </form>
   </body>
