--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,10 @@
       <label>Title:</label>
       <input type="text" name="title" required /><br />
       <label>Price:</label>
-      <input type="text" name="price" required /><br />
+      <input type="number" name="price" required /><br />
       <label>Thumbnail:</label>
       <input type="text" name="thumbnail" required /><br />
-      <input type="submit" value="Cargar Producto" />
+      <button type="submit">Cargar Producto</button>
     </form>
   </body>
 </html>
