arreglo de carga de formulario

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Cargar producto</h1>
-    <form action="/api/productos/" method="POST" enctype="multipart/form-data">
+    <form action="/api/productos/" method="POST">
       <label>Title:</label>
       <input type="text" name="title" required /><br />
       <label>Price:</label>
